--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
                 crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.6/group.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.6/span_label.min.js"></script>
-            <!-- <script src="group.js"></script> -->
+            <script/ src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.7/relation.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.7/span_label.min.js"></script>
+            <!-- <script src="relation.js"></script> -->
             <!-- <script src="span_label.js"></script> -->
             <style>
                 .flex-container {
@@ -101,11 +101,11 @@
                         </tbody>
                     </table>
                 </div>
-                <button id='group_btn' class="btn btn-primary" type="button" onclick="start_group_labeling()"
-                    style="display: none;">Start Group Tagging</button>
-                <div id="group_labeling" style="display: none;">
+                <button id='relation_btn' class="btn btn-primary" type="button" onclick="start_relation_tagging()"
+                    style="display: none;">Start Relation Tagging</button>
+                <div id="relation_labeling" style="display: none;">
                     <div id='pair_form' novalidate style="width: 80%;margin: auto;">
-                        <h4>Group Result</h4>
+                        <h4>Relation Result</h4>
                         <table class='table table-bordered'>
                             <thead>
                                 <tr>
@@ -115,7 +115,7 @@
                                     <th scope="col" style="width: 80px;">Delete</th>
                                 </tr>
                             </thead>
-                            <tbody id='group_result'>
+                            <tbody id='relation_result'>
                             </tbody>
                         </table>
                     </div>
@@ -134,7 +134,8 @@
                                 <tr>
                                     <td>
                                         <div class="has-validation">
-                                            <select id="type_selection" class="form-select" onchange="validate_group()">
+                                            <select id="type_selection" class="form-select"
+                                                onchange="validate_relation()">
                                                 <option disabled selected>--</option>
                                                 <option value="match">Match</option>
                                                 <option value="conflict">Conflict</option>
@@ -147,7 +148,7 @@
                                         <div class="has-validation">
                                             <input id="recalled_ids" type="text" class="form-control"
                                                 pattern="^\d+(,\d+)*$" placeholder="e.g. 1,2,5" data-id-type='recalled'
-                                                oninput="validate_group()">
+                                                oninput="validate_relation()">
                                             <div class="invalid-feedback">Please fill the field with the correct
                                                 pattern.</div>
                                         </div>
@@ -156,13 +157,14 @@
                                         <div class="has-validation">
                                             <input id="retold_ids" type="text" class="form-control"
                                                 pattern="^\d+(,\d+)*$" placeholder="e.g. 1,2,5" data-id-type='retold'
-                                                oninput="validate_group()">
+                                                oninput="validate_relation()">
                                             <div class="invalid-feedback">Please fill the field with the correct
                                                 pattern.</div>
                                         </div>
                                     </td>
                                     <td><button type="button" class="btn btn-sm btn-success"
-                                            style="background-color: #198754" onclick="add_group()">Added</button></td>
+                                            style="background-color: #198754" onclick="add_relation()">Added</button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -173,7 +175,7 @@
                             </crowd-text-area>
                             <crowd-text-area id="final_record" name="record" rows="4" style="display: none;">
                             </crowd-text-area>
-                            <crowd-text-area id="final_group" name="group" rows="4" style="display: none;">
+                            <crowd-text-area id="final_relation" name="relation" rows="4" style="display: none;">
                             </crowd-text-area>
                             <h4>Opinion</h4>
                             <crowd-text-area id="opinion" name="opinion"
