--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
                 crossorigin="anonymous"></script>
-            <script/ src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.7/relation.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.7/span_label.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.8/relation.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.8/span_label.min.js"></script>
             <!-- <script src="relation.js"></script> -->
             <!-- <script src="span_label.js"></script> -->
             <style>
@@ -67,7 +67,7 @@
             </style>
             <div style="text-align: center; margin:30px auto 200px auto">
                 <a id='instruction_btn' href="https://coyoteleo.github.io/mturk/instruction.html"
-                    class="btn btn-primary" target="_blank" onclick="start_spen_labeling()">View instructions before
+                    class="btn btn-primary" target="_blank" onclick="start_span_labeling()">View instructions before
                     labeling</a>
                 <hr>
                 <div id="span_labeling" style="display: none;">
