--- a/instruction.html
+++ b/instruction.html
@@ -113,7 +113,7 @@
                                         many animals like giraffes, gorillas, elephants, snakes,
                                         tigers, lions etc..)<br />
                                         <span class="example_sent">it was the middle of July.</span>-> It relates to the
-                                        event.
+                                        event.<br>
                                         <span class="example_sent">it was a pretty hot day.</span>-> It only describes
                                         the environment but doesn't relates to the
                                         event so that <span style="color: red;">don't</span> select these spans.
