update label page

--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
                 <hr>
                 <div id="span_labeling" style="display: none;">
                     <div style="text-align: justify;">
-                        <h4 style="text-align: center;">Summary</h4>
-                        Me and my girlfriend went to the zoo on a hot day. We saw
-                        many animals like giraffes, gorillas, elephants, snakes,
-                        tigers, lions etc..
+                        <h4 style="text-align: center;padding: 8px;">Summary</h4>
+                        Me and my girlfriend went to the zoo on a hot day. We saw many animals like giraffes, gorillas,
+                        elephants, snakes, tigers, lions etc..
                     </div>
                     <table class='table'>
                         <tr>
                             <th style="width: 50%;">Recalled story</th>
-                            <th style="width: 0px;"></th>
+                            <th style="width: 10px;"></th>
                             <th style="width: 50%;">Retold story</th>
                         </tr>
                         <tbody style="border-color: black;">
