fix delete span error

--- a/instruction.html
+++ b/instruction.html
@@ -54,7 +54,7 @@
                 </div>
                 <div>
                     <h3>Annotation Description</h3>
-                    There are two parts in this lebeling work: Span Labeling and Relation Tagging
+                    There are two parts in this labeling work: Span Labeling and Relation Tagging
                     <h5>Outline</h5>
                     <div>
                         1. Click 'View Instructions' and read the descriptions on this page.<br>
