--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
                 crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.8/relation.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.8/span_label.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.9/relation.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.9/span_label.min.js"></script>
             <!-- <script src="relation.js"></script> -->
             <!-- <script src="span_label.js"></script> -->
             <style>
@@ -73,7 +73,8 @@
                 <div id="span_labeling" style="display: none;">
                     <div style="text-align: justify;">
                         <h4 style="text-align: center;padding: 8px;">Summary</h4>
-                        A medical emergency for hypoglecimic diabetic from a low blood sugar crash. A strange fourth of July for 2019 that was
+                        A medical emergency for hypoglecimic diabetic from a low blood sugar crash. A strange fourth of
+                        July for 2019 that was
                         quite memorable to myself and my husband.
                     </div>
                     <table class='table'>
